--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       </div>
       <div>
         <ul>
-          <li><a href="NewsGrid.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html" class="current">About</a></li>
         </ul>
       </div>
