--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div>
         <ul>
-          <li><a href="NewsGrid.html" class="current">Home</a></li>
+          <li><a href="index.html" class="current">Home</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </div>
